--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,10 @@
 [submodule "Type-C.pretty"]
 	path = Type-C.pretty
 	url = https://github.com/ai03-2725/Type-C.pretty
+[submodule "marbastlib"]
+	path = marbastlib
+	url = https://github.com/ebastler/marbastlib/
+	branch = untested
+[submodule "kicad-keyboard-parts.pretty"]
+	path = kicad-keyboard-parts.pretty
+	url = https://github.com/ebastler/kicad-keyboard-parts.pretty
